src/objects/TRACT_Bill_Cycle__c.object
<CustomObject>
    <label>Gotransverse Bill Cycle</label>
    <nameField>
        <label>Gotransverse Bill Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gotransverse Bill Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Billing_Account_Category_Eid__c</fullName>
        <label>Billing Account Category Eid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle_Type__c</fullName>
        <label>Gotransverse Bill Cycle Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACT_Bill_Cycle_Currency_Type__c</fullName>
        <label>Gotransverse Bill Cycle Currency Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>